--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "MonsterFanSec"
-title_separator          : "-"
+title_separator          : "·"
 name                     : &name "Fan"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://monsterfansec.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "monsterfansec.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -28,7 +28,7 @@ author:
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "sec.fan@qq.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
