--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Just Do It"
   location         : "Earth"
   employer         : "SEU"
-  uri              : #"https://github.com/settings/profile"
+  uri              : #""
   email            : "sec.fan@qq.com" 
 
   # Academic websites
@@ -42,7 +42,8 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/MonsterFanSec"
+  github           : "MonsterFanSec"
+  CSDN             : "MonsterFanSec"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
